[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.wheel]
include = [
  "acmm",
]

[project]
name = "acmm"
version = "0.0.1"
description = "A mod manager for Assetto Corsa."

license = "GPL-2.0"
license-files = ["LICEN[CS]E*"]
authors = [
  { name="Philipp Kosarev", email="philipp.kosarev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "libjam == 0.1.9",
  "pycountry >= 24.0.0",
  "requests >= 2.0.0",
  "vdf >= 3.0",
]

[project.scripts]
acmm = "acmm.cli:main"

[project.urls]
Homepage = "https://github.com/philippkosarev/acmm"
Issues = "https://github.com/philippkosarev/acmm/issues"